<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_cell"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/profile_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/add_photo_iv"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintBottom_toBottomOf="@+id/profile_image"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toEndOf="@+id/profile_image" />

        <TextView
            android:id="@+id/name_user_title"
            style="@style/Roboto.ExtraBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/introduce_name"
            app:layout_constraintBottom_toTopOf="@+id/name_user_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_user_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="24"
            app:counterOverflowTextAppearance="@style/TextInput.Error"
            app:counterTextAppearance="@style/TextInput.Hint"
            app:layout_constraintBottom_toTopOf="@+id/steps_daily_user_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_user_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_user"
                style="@style/Roboto.ExtraBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/steps_daily_user_title"
            style="@style/Roboto.ExtraBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/introduce_steps_goal"
            app:layout_constraintBottom_toTopOf="@+id/steps_daily_user_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_user_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/steps_daily_user_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/weight_user_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_daily_user_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/steps_daily_user"
                style="@style/Roboto.ExtraBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/weight_user_title"
            style="@style/Roboto.ExtraBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/introduce_weight"
            app:layout_constraintBottom_toTopOf="@+id/weight_user_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steps_daily_user_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/weight_user_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/age_user_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_user_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/weight_user"
                style="@style/Roboto.ExtraBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/age_user_title"
            style="@style/Roboto.ExtraBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/introduce_age"
            app:layout_constraintBottom_toTopOf="@+id/age_user_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_user_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/age_user_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_user_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/age_user"
                style="@style/Roboto.ExtraBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/height_user_title"
            style="@style/Roboto.ExtraBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/introduce_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_user_layout" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/height_user_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_user_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/height_user"
                style="@style/Roboto.ExtraBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>